chore: extreme optimization for v1.0 release and documentation updates / chore: v1.0 릴리스를 위한 극한의 최적화 및 문서 업데이트

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "right-pad",
   "version": "1.0.0",
-  "description": "Appends a single space to the right of a string.",
+  "description": "Extremely optimized v1.0 right-pad. High speed, zero bloat.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
