--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "right-pad-extreme",
+  "name": "right-pads",
   "version": "1.0.0",
-  "description": "🚀 The Fastest & Most Powerful Extreme v1.0 right-pad-extreme. High speed, zero bloat, pure power.",
+  "description": "🚀 The Fastest & Most Powerful Extreme v1.0 right-pads. High speed, zero bloat, pure power.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -11,19 +11,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hslcrb/npmpack_right-pad-extreme.git"
+    "url": "git+https://github.com/hslcrb/npmpack_right-pads.git"
   },
   "keywords": [
-    "right-pad-extreme",
+    "right-pads",
     "pad",
     "string"
   ],
   "author": "Rheehose (Rhee Creative)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hslcrb/npmpack_right-pad-extreme/issues"
+    "url": "https://github.com/hslcrb/npmpack_right-pads/issues"
   },
-  "homepage": "https://github.com/hslcrb/npmpack_right-pad-extreme#readme",
+  "homepage": "https://github.com/hslcrb/npmpack_right-pads#readme",
   "files": [
     "dist",
     "README.md",
